--- a/song detail/detail.css
+++ b/song detail/detail.css
@@ -135,3 +135,65 @@
     color: rgba(255, 255, 255, 0.634);
 }
 
+.grid-container {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-gap: 10px;
+    height: 80vh;
+    margin: 20px;
+}
+.grid-container > div {
+    background-color: rgb(52, 68, 52);
+    text-align: center;
+    border-radius: 10px;
+}
+#item2{
+    grid-column: 1 / 3;
+    grid-row: 1 / 3;
+}
+.action{
+    position: relative;
+    top: 110px;
+}
+#playbtn{
+    background-color: rgb(111, 201, 72);
+    border-radius: 50%;
+    padding: 15px;
+    color: black;
+    font-size: 25px;
+}
+#plus{
+    padding: 0px 10px;
+    font-size: 30px;
+    color: rgba(255, 255, 255, 0.733);
+    padding-left: 10px;
+}
+#playbtn:hover{
+    background-color: rgb(90, 165, 58);
+    transition: ease 0.5s;
+    cursor: pointer;
+}
+#plus:hover{
+    color: white;
+    transition: ease 0.2s;
+    cursor: pointer;
+}
+#progress{
+    position: relative;
+    bottom: 8px;
+    -webkit-appearance: none;
+    width: 300px;
+    height: 6px;
+    background: rgb(255, 255, 255);
+    border-radius: 4px;
+    cursor: pointer;
+    margin: 0 8px ;
+}
+#progress::-webkit-slider-thumb{
+    -webkit-appearance: none;
+    background: rgb(90, 165, 58);
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    border: 4px solid white;
+}
