--- a/home/home.css
+++ b/home/home.css
@@ -33,7 +33,6 @@
 }
 .sidebar.active #btn{
     left: 70%;
-
 }
 .sidebar .top .logo{
     color: rgb(255, 253, 236);
@@ -287,6 +286,73 @@
     font-size: 20px;
     cursor: pointer;
 }
-.bg{
-    background-image: url("https://i.pinimg.com/736x/80/0f/37/800f37d265016f1ef586a97dc8ac950e.jpg");
+
+@media screen and (max-width: 600px) {
+
+    .sidebar{
+        bottom: 0;
+        left: 0;
+        height: 60px;
+        width: 100%;
+        z-index: 999;
+    }
+    .main-content{
+        top: 60px;
+        left: 0;
+        width: 100%;
+    }
+    .sidebar.active{
+        display: none;
+    }
+    #btn{
+        display: none;
+    }
+    #nav1 , #nav2 , #nav3 , #nav4{
+        color:rgb(255, 255, 255);
+    }
+    #nav{
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 60px;
+    }
+    .sidebar ul li a span{
+        display: none;
+    }
+    .sidebar ul li{
+        width: auto;
+        margin: 0;
+        top: 5px;
+    }
+    .sidebar ul{
+        display: flex;
+        justify-content: space-around;
+    }
+    .random img{
+        display: none;
+    }
+    .random{
+        height: 200px;
+    }
+    #artist , #plays{
+        display: none;
+    }
+    .container .random .left .info{
+        margin: 0;
+        padding: 0;
+    }
+    .container .random .left .info .button{
+        margin: 0;
+    }
+    .container .playlist{
+        flex-direction: column;
+    }
+    .container .playlist .genres{
+        width: 100%;
+    }
+    .container .playlist .music-list{
+        width: 100%;
+        height: 230px;
+    }
 }
