--- a/list/list.css
+++ b/list/list.css
@@ -160,3 +160,56 @@
     top: 17px;
     left: 20px;
 }
+@media screen and (max-width: 600px) {
+
+    .sidebar{
+        bottom: 0;
+        left: 0;
+        height: 60px;
+        width: 100%;
+        z-index: 999;
+    }
+    .main-content{
+        top: 60px;
+        left: 0;
+        width: 100%;
+    }
+    .sidebar.active{
+        display: none;
+    }
+    #btn{
+        display: none;
+    }
+    #nav1 , #nav2 , #nav3 , #nav4{
+        color:rgb(255, 255, 255);
+    }
+    #nav{
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 60px;
+    }
+    .sidebar ul li a span{
+        display: none;
+    }
+    .sidebar ul li{
+        width: auto;
+        margin: 0;
+        top: 5px;
+    }
+    .sidebar ul{
+        display: flex;
+        justify-content: space-around;
+    }
+    .header{
+        position: relative;
+        left: 0;
+        font-size: 15px;
+        color: rgb(75, 89, 69);
+    }
+    .list{
+        padding: 0px;
+    }
+    
+}
