--- a/track/track.css
+++ b/track/track.css
@@ -189,6 +189,7 @@
     border-radius: 5px;
     margin-right: 10px;
     font-size: 16px;
+    margin: 5px;
 }
 
 .add-product button {
@@ -214,6 +215,72 @@
     font-size: 300px;
     line-height: 280px;
     color: rgb(51, 66, 51);
-    position: absolute;
+    position: fixed;
     pointer-events: none;
 }
+#blur{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: -999;
+    opacity: 0;
+}
+#blur.active{
+    opacity: 1;
+    background-color: #324b36b2;
+    transition: all 0.5s ease;
+    z-index: 998;
+}
+@media screen and (max-width: 600px) {
+
+    .sidebar{
+        bottom: 0;
+        left: 0;
+        height: 60px;
+        width: 100%;
+        z-index: 999;
+    }
+    .main-content{
+        top: 60px;
+        left: 0;
+        width: 100%;
+    }
+    .sidebar.active{
+        display: none;
+    }
+    #btn{
+        display: none;
+    }
+    #nav1 , #nav2 , #nav3 , #nav4{
+        color:rgb(255, 255, 255);
+    }
+    #nav{
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 60px;
+    }
+    .sidebar ul li a span{
+        display: none;
+    }
+    .sidebar ul li{
+        width: auto;
+        margin: 0;
+        top: 5px;
+    }
+    .sidebar ul{
+        display: flex;
+        justify-content: space-around;
+    }
+    .menuTitle{
+        font-size: 150px;
+        line-height: 150px;
+        position: fixed;
+    }
+    
+}
+
+
+
