--- a/song detail/detail.css
+++ b/song detail/detail.css
@@ -143,7 +143,7 @@
     margin: 20px;
 }
 .grid-container > div {
-    background-color: rgb(52, 68, 52);
+    background-image: linear-gradient(rgb(52, 68, 52), rgb(141, 11, 65));
     text-align: center;
     border-radius: 10px;
 }
@@ -155,45 +155,88 @@
     position: relative;
     top: 110px;
 }
-#playbtn{
-    background-color: rgb(111, 201, 72);
-    border-radius: 50%;
-    padding: 15px;
-    color: black;
-    font-size: 25px;
-}
-#plus{
-    padding: 0px 10px;
-    font-size: 30px;
-    color: rgba(255, 255, 255, 0.733);
-    padding-left: 10px;
-}
-#playbtn:hover{
-    background-color: rgb(90, 165, 58);
-    transition: ease 0.5s;
-    cursor: pointer;
-}
-#plus:hover{
+#item1{
     color: white;
-    transition: ease 0.2s;
-    cursor: pointer;
+    font-size: 30px;
+    font-weight: bolder;
 }
-#progress{
-    position: relative;
-    bottom: 8px;
-    -webkit-appearance: none;
-    width: 300px;
-    height: 6px;
-    background: rgb(255, 255, 255);
-    border-radius: 4px;
-    cursor: pointer;
-    margin: 0 8px ;
+.text-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
 }
-#progress::-webkit-slider-thumb{
-    -webkit-appearance: none;
-    background: rgb(90, 165, 58);
-    width: 20px;
-    height: 20px;
+#item3{
+    height: 200px;
+    width: 200px;
+    object-fit: cover;
+    object-position: center;
     border-radius: 50%;
-    border: 4px solid white;
+    animation: spin 20s linear infinite;
+}
+#small-logo{
+    width: 100px;
+    margin-left: 8px;
+    margin-top: 5px;
+}
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+@media screen and (max-width: 600px) {
+
+    .sidebar{
+        bottom: 0;
+        left: 0;
+        height: 60px;
+        width: 100%;
+        z-index: 999;
+    }
+    .main-content{
+        top: 60px;
+        left: 0;
+        width: 100%;
+    }
+    .sidebar.active{
+        display: none;
+    }
+    #btn{
+        display: none;
+    }
+    #nav1 , #nav2 , #nav3 , #nav4{
+        color:rgb(255, 255, 255);
+    }
+    #nav{
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 60px;
+    }
+    .sidebar ul li a span{
+        display: none;
+    }
+    .sidebar ul li{
+        width: auto;
+        margin: 0;
+        top: 5px;
+    }
+    .sidebar ul{
+        display: flex;
+        justify-content: space-around;
+    }
+    #item2{
+        grid-column: 1 / 4;
+        grid-row: 1 / 2;
+        margin-bottom: 20px;
+    }
+    .grid-container {
+        display: grid;
+        gap: 0px;
+    }
+    #item3{
+        display: none;
+    }
+
 }
