--- a/song detail/detail.css
+++ b/song detail/detail.css
@@ -160,8 +160,10 @@
     font-size: 30px;
     font-weight: bolder;
 }
+
 .text-container{
     display: flex;
+    position: relative;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -239,4 +241,15 @@
         display: none;
     }
 
+}
+
+#action{
+    color: white;
+    position: absolute;
+    bottom: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+    font-size: 20px;
 }
