--- a/list/list.css
+++ b/list/list.css
@@ -357,6 +357,17 @@ font-size: 1.05rem;
     width: 50px;
     color: white;
 }
+#logo{
+    position: absolute;
+    width: 300px;
+    left: -45px;
+    top: -50px;
+}
+#small-logo{
+    width: 100px;
+    margin-left: 8px;
+    margin-top: 5px;
+}
 @media screen and (max-width: 600px) {
 
     .sidebar{
