--- a/list/list.css
+++ b/list/list.css
@@ -14,6 +14,7 @@ background-color: rgb(75, 89, 69);
 padding: 0.4rem 0.8rem;
 transition: all 0.5s ease;
 }
+
 .sidebar.active ~ .main-content{
 left: 180px;
 width: calc(100% - 180px);
@@ -362,59 +363,14 @@ font-size: 1.05rem;
     width: 300px;
     left: -45px;
     top: -50px;
+    display: none;
+}
+.logo.active{
+    display: block;
 }
 #small-logo{
     width: 100px;
     margin-left: 8px;
     margin-top: 5px;
 }
-@media screen and (max-width: 600px) {
 
-    .sidebar{
-        bottom: 0;
-        left: 0;
-        height: 60px;
-        width: 100%;
-        z-index: 999;
-    }
-    .main-content{
-        top: 60px;
-        left: 0;
-        width: 100%;
-    }
-    .sidebar.active{
-        display: none;
-    }
-    #btn{
-        display: none;
-    }
-    #nav1 , #nav2 , #nav3 , #nav4{
-        color:rgb(255, 255, 255);
-    }
-    #nav{
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 60px;
-    }
-    .sidebar ul li a span{
-        display: none;
-    }
-    .sidebar ul li{
-        width: auto;
-        margin: 0;
-        top: 5px;
-    }
-    .sidebar ul{
-        display: flex;
-        justify-content: space-around;
-    }
-    .card-left{
-        display: none;
-    }
-    .card-right{
-        width: 100%;
-        padding: 20px;
-    }
-}
