--- a/track/track.css
+++ b/track/track.css
@@ -237,7 +237,7 @@
     text-align: center;
     cursor: pointer;
     width: 300px;
-    height: 230px;
+    height: 250px;
     color: rgb(255, 255, 255);
     font-size: 10px;
     padding: 10px;
@@ -248,6 +248,7 @@
     position: relative;
     margin-top: 15px;
 }
+
 .song-item:hover{
     background-color: rgb(141, 11, 65);
     color:rgb(255, 255, 255);
@@ -350,4 +351,18 @@
 .right-panel img{
     width: 100%;
     height: 100%;
+}
+
+.delete-btn{
+    background-color: rgb(141, 11, 65);
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 10px;
+    transition: 0.3s ease;
+}
+.delete-btn:hover{
+    background-color: rgb(75, 89, 69);
 }
