--- a/track/track.css
+++ b/track/track.css
@@ -362,6 +362,7 @@
     cursor: pointer;
     font-size: 10px;
     transition: 0.3s ease;
+    width: 100%;
 }
 .delete-btn:hover{
     background-color: rgb(75, 89, 69);
