--- a/track/track.css
+++ b/track/track.css
@@ -2,12 +2,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .sidebar{
     position: fixed;
-    top: 0;
-    left: 0;
+    left: 0px;
     height: 100vh;
     width: 80px;
     background-color: rgb(75, 89, 69);
@@ -95,7 +94,7 @@
 }
 .main-content{
     position: relative;
-    background-image: url("https://i.pinimg.com/736x/ff/a5/fc/ffa5fce3b984b782c536af43e1658e28.jpg");
+    background-color:black;
     background-repeat: repeat;
     min-height: 100vh;
     top: 0;
@@ -117,7 +116,7 @@
     align-items: center;
     gap: 6px;
     width: 100%;
-    background-color: rgb(141, 11, 65);
+    background-color: rgb(75, 89, 69);
     border: 1px solid black;
     padding: 10px;
     border-radius: 20px;
@@ -139,7 +138,6 @@
 .grid-container{
     display: grid;
     grid-template-columns: repeat(6 , auto);
-    gap: 30px;
     justify-content: center;
 }
 
@@ -233,7 +231,7 @@
 
 .song-item{
     margin-top: 50px;
-    background-color: rgb(75, 89, 69);
+    background-color: rgb(37, 37, 37);
     border-radius: 10px;
     text-align: center;
     cursor: pointer;
@@ -252,7 +250,7 @@
 }
 
 .song-item:hover{
-    background-color: rgb(141, 11, 65);
+    background-color: rgb(75, 89, 69);
     color:rgb(255, 255, 255);
     transition: all 0.3s ease;
     transform: scale(1.05);
@@ -358,10 +356,10 @@
 }
 
 .delete-btn{
-    background-color: rgb(75, 89, 69);
+    background-color: rgb(136, 160, 126);
     color: white;
     border: none;
-    margin-top: 7px;
+    margin-top: 15px;
     padding: 5px 10px;
     border-radius: 5px;
     cursor: pointer;
@@ -371,6 +369,11 @@
     opacity: 0;
     position: relative;
     transition: all 0.3s ease;
+}
+.delete-btn:hover{
+    background-color: rgb(69, 70, 69);
+    width: 100%;
+    opacity: 1;
 }
 .name{
     width: 100%;
