--- a/signup/signup.css
+++ b/signup/signup.css
@@ -288,6 +288,9 @@ input:focus {
 #password{
     margin-top: 15px;
 }
+iframe{
+    margin-top: 15px;
+}
 @media screen and (max-width: 600px) {
   .container {
     height: 100vh;
